2008-09-29 Luiz Armesto <luiz.armesto@gmail.com>

	* src/gui/widgets/timeline.py: Renamed Bullet attribute amount to
	  amountDue, added refresh method to Timeline and minor fixes.
	* src/gui/maindialog.py: Use new timeline widget now.
	* src/lib/actions.py, src/lib/dbus_actions.py, src/daemon/dbus_manager.py: 
	  Added new methods to dbus - get_interval_totals and get_interval_bills.

2008-09-28 Og Maciel <ogmaciel@gnome.org>

	* src/gui/widgets/timeline.py: More keyboard shortcuts added, such as zoom in/out.
	* src/billreminder.py, src/gui/widgets/statusbar.py, src/gui/maindialog.py, src/lib/dialogs.py:
	  Changed "Record" to "Bill" to be consistent with nomenclature (Fixes Bug: 554228).

2008-09-27 Og Maciel <ogmaciel@gnome.org>

	* src/gui/adddialog.py: Allow bills to have a null amount. Fixes Bug #551953.
	* src/gui/widgets/charting.py: Display 2 decimal places for labels. Fixes Bug #551953.
	* src/gui/widgets/viewbill.py: Allow null values for amountDue. Fixes Bug #551953.
	* src/lib/actions.py: Handle null values, returning a zero where needed. Fixes Bug #551953.
	* src/gui/widgets/timeline.py: Added new timeline widget.
	* data/Makefile.am: Make sure that gconf is run (if available) and register schema.
	  Partially fixes Bug #553694.

2008-09-26 Og Maciel <ogmaciel@gnome.org>

	* src/lib/common.py: datadir variable is no longer hard coded.
	* src/lib/Makefile.am: Fixes Bug #553890 to get datadir from configuration step.
	* src/lib/defs.py.in: datadir is derived during build time.

2008-09-25 Og Maciel <ogmaciel@gnome.org>

	* src/db/billstable.py: Bump version and make amountDue optional.
	* src/lib/dal.py: Validating that the tables update routine does its job.

2008-09-24 Og Maciel <ogmaciel@gnome.org>

	* src/gui/widgets/calendarwidget.py: Added mnemonics.
	* src/gui/widgets/genericlistview.py: Added a filter.
	* src/gui/widgets/SearchEntry.py: Borrowed code to add smart filtering capabilities.